added two more routes
