# server/app.js
@@ -29,7 +29,7 @@ app.use(express.urlencoded({ extended: false }))
 const userRoute = require('./routes/User.route')
 const indexRoute = require('./routes/Index.route')
 const { verifyToken } = require('./middlewares/jwt')
-const friendsRoute = require('./routes/Friend.route')
+const msgRoute = require('./routes/message.route')
 
 // routes
 
@@ -39,7 +39,7 @@ app.use('/api-docs', swaggerUI.serve, swaggerUI.setup(require('./swagger-js-docs
 
 app.use('/api/v1/users', userRoute)
 app.use('/api/v1/auth', indexRoute)
-app.use('/api/v1/user',friendsRoute )
+app.use('/api/v1/message', msgRoute)
 
 app.get('/protected', verifyToken, (req, res) => {
     res.json({user:req.user})
